--- a/primera web.html
+++ b/primera web.html
@@ -5,12 +5,12 @@
     <title>Este texto es el título del documento</title>
     <meta charset="utf-8">
     <meta name="description" content="Este es un documento HTML5">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+
   <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
-    <div class="container">
+   
     <header>
         Este es el título
     </header>
@@ -31,10 +31,10 @@
             Cita del artículo dos
         </aside>
     </main>
-    <footer  class="t">
+    <footer >
         &copy; Derechos Reservados 2025
     </footer>
-</div>
+
 </body>
 
 </html>
